# rust_next_template

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
client/src/app/: page.tsx
src/: main.rs  types.rs
